tests/fixtures/errors/copy_generic_class.z
Holder: class {
    n: i64
}

dup: function as { t: Any.generic } in {v: t} out t is {
    return v.copy
}

main: function is {
    h: Holder n: 5
    g: dup v: h
    print "\{g.n}"
}
