tests/fixtures/errors/copy_generic_class.err
error[E0500]: zemitterc: unsupported .copy of type z_t11_Holder in a generic body [line 6]
1 error found
